# Laba6-semestr3

./: CMakeLists.txt
docx/: README.md
sql/: init.sql
src/: db_manager.cpp  db_manager.h  main.cpp
